# yt-video-query-tool

./: .env.example  INSTALL.md  Makefile  README.md  api_scraper.py  pyproject.toml  rss_scraper.py  rss_scrapper.py  run.sh
src/yt_video_query_tool/: __init__.py  api.py  rss.py
src/yt_video_query_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
